--- a/rdf-lamellae/README
+++ b/rdf-lamellae/README
@@ -1,1 +1,2 @@
-
+rdf-lam.py is used calculate the density distribution along the normal direction of lamellar structures
+lamellae must be rotated to be perpendicular to the X-axis, and only bead O and C are in the xyz file.
